--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@slack/web-api": "^7.13.0",
     "@tailwindcss/vite": "^4.1.18",
     "cors": "^2.8.6",
     "crypto-js": "^4.2.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@playwright/test": "^1.58.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
