--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "start": "node server.js",
     "start-servers": "npm start & npm run dev",
-    "test-and-report": "npx playwright test; node scripts/ci-report.cjs"
+    "test-and-report": "npx playwright test", 
+    "test1":"node scripts/ci-report.cjs"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
